cmake_minimum_required(VERSION 3.13)
project(cpp)

set(CMAKE_CXX_STANDARD 17)

#add_executable(cpp bjoon_2018.cpp)
#add_executable(cpp swea_1952.cpp)
#add_executable(cpp swea_1215.cpp)
#add_executable(cpp swea_4014.cpp)
#add_executable(cpp bjoon_10950.cpp)
#add_executable(cpp bjoon_10951.cpp)
add_executable(cpp bjoon_7287.cpp)